Updated to chapter 4 Fixed previous button not calling updateQuestion()

--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:layout_height="match_parent" >
 
     <TextView
         android:id="@+id/question_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:padding="24dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal">
 
         <Button
             android:id="@+id/button_true"
@@ -32,25 +32,21 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <ImageButton
+        android:id="@+id/imagebutton_previous"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <ImageButton
-            android:id="@+id/imagebutton_previous"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="24dp"
-            android:src="@drawable/arrow_left"
-            android:contentDescription="@string/description_previous"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
+        android:padding="24dp"
+        android:src="@drawable/arrow_left"
+        android:contentDescription="@string/description_previous"/>
         
-        <ImageButton
-            android:id="@+id/imagebutton_next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="24dp"
-            android:src="@drawable/arrow_right"
-            android:contentDescription="@string/description_next"/>
-    </LinearLayout>
-
-</LinearLayout>
+    <ImageButton
+        android:id="@+id/imagebutton_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:padding="24dp"
+        android:src="@drawable/arrow_right"
+        android:contentDescription="@string/description_next"/>
+</FrameLayout>
